feat:新增 hello-world 组件，本次上传为涉及到要新增及自动生成的文件

--- a/examples/nav.config.json
+++ b/examples/nav.config.json
@@ -309,6 +309,14 @@
               "title": "Drawer 抽屉"
             }
           ]
+        },{
+          "groupName": "ElementDec",
+          "list": [
+            {
+              "path": "/hello-world",
+              "title": "HelloWorld 你好世界"
+            }
+          ]
         }
       ]
     }
