--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
   "dependencies": {
     "async-validator": "~1.8.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
+    "css-color-function": "^1.3.3",
     "deepmerge": "^1.2.0",
     "normalize-wheel": "^1.0.1",
+    "object-assign": "^4.1.1",
     "resize-observer-polyfill": "^1.5.0",
     "throttle-debounce": "^1.0.1"
   },
