--- a/package.json
+++ b/package.json
@@ -62,8 +62,11 @@
   "dependencies": {
     "async-validator": "~1.8.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.0",
+    "blob-util": "^2.0.2",
     "css-color-function": "^1.3.3",
     "deepmerge": "^1.2.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.7.1",
     "normalize-wheel": "^1.0.1",
     "object-assign": "^4.1.1",
     "resize-observer-polyfill": "^1.5.0",
@@ -91,7 +94,7 @@
     "copy-webpack-plugin": "^5.0.0",
     "coveralls": "^3.0.3",
     "cp-cli": "^1.0.2",
-    "cross-env": "^3.1.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^2.1.0",
     "es6-promise": "^4.0.5",
     "eslint": "4.18.2",
